# Research_Papers

./: .gitignore  LICENSE  README.md  pyproject.toml
.ipynb_checkpoints/: run-checkpoint.ipynb
docs/: charter.md  methodology.md  prior_art.md  setup.md
docs/notes/: training-cost.md
drafts/: nested-local-coupling-paper.md
experiments/: README.md
experiments/0001-reproduce-forgetting/: README.md  config.yaml
experiments/0001-reproduce-forgetting/.ipynb_checkpoints/: run-checkpoint.ipynb
experiments/0002-nested-local-coupling/: README.md  run.py
experiments/0003-plasticity-vs-forgetting/: README.md  run.py
experiments/0004-real-benchmark-forgetting/: README.md  run.py
experiments/0005-localpc-horizon-frontier/: README.md  run.py
experiments/0006-localpc-selective-gating/: README.md  run.py
experiments/0007-nl-nondegenerate-benchmark/: README.md  run.py
experiments/0008-nl-gated-consolidation/: README.md  run.py
experiments/0009-sparse-memory-localpc/: README.md  run.py
experiments/0010-smf-localpc-realmodel/: INTEGRATION.md  README.md  analyze.py  local_pc.py  run_0010.sh  setup.sh  sitecustomize.py  smf_localpc.py
experiments/_TEMPLATE/: README.md  config.yaml
ideas/: README.md  TEMPLATE.md  localpc-horizon-frontier.md  localpc-selective-gating.md  nested-learning-local-coupling.md  nl-gated-consolidation.md  nl-nondegenerate-benchmark.md  nl-sparse-memory-localpc.md  plasticity-vs-forgetting.md
lab_notebook/: 2026-05-16.md  2026-05-17.md  _TEMPLATE.md
papers/: CODE_AND_BLOGS.md  README.md  TEMPLATE.md  nested-learning-hope.md
src/researchkit/: __init__.py  repro.py
