[project]
name = "research-papers"
version = "0.1.0"
description = "Hypothesis-driven research lab notebook"
readme = "README.md"
requires-python = ">=3.11"
# Kept deliberately minimal — the research direction is open. Add heavy deps
# (torch, transformers, ...) per-experiment or here once a direction is chosen.
dependencies = [
    "numpy>=1.26",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/researchkit"]

[tool.uv]
package = true
