[project]
name = "research-papers"
version = "0.1.0"
description = "Hypothesis-driven research lab notebook"
readme = "README.md"
# Capped <3.13: avalanche-lib (the CL baseline library) lags newest Python.
# 3.12 is the sweet spot on Apple Silicon as of 2026.
requires-python = ">=3.11,<3.13"
# Base stays minimal. Heavy experiment deps live in the `experiments` extra so
# `uv sync` (no extra) stays fast and the direction stays open.
dependencies = [
    "numpy>=1.26",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
# Install with: uv sync --extra experiments
experiments = [
    "torch>=2.2",          # Apple Silicon: pip wheels include MPS support
    "torchvision>=0.17",
    "avalanche-lib>=0.5,<0.7",  # Split-MNIST + EWC/GEM/... baselines + metrics
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/researchkit"]

[tool.uv]
package = true
